@@ -20,13 +20,13 @@
             <img src="mac_viewtrace.jpg" alt="Mac OS X Crash log">
         </li>
         <li>
-            <p>If the crash report dialog does not appear or the crash is hard to reproduce, you can get the crash log from the
-            <tt>Safari.crash.log</tt> file located in <tt>~/Library/Logs/CrashReporter/</tt>. This file is a plain text file and can
-            be viewed in the default Console.app or your favorite text editor.</p>
-
-            <p><strong>All</strong> of Safari's crashes are logged to this file so please only attach the last crash in it.
-                Crashes are separated by a series of asterisks (&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;)
-                for easy identification.</p>
+            <p>If the crash report dialog does not appear or the crash is hard to reproduce, crash logs can be retrieved from the <tt>~/Library/Logs/CrashReporter</tt> folder.</p>
+            <p>On Leopard (Mac OS X 10.5), crash logs are stored as individually dated and time stamped files. Despite having a &ldquo;.crash&rdquo;
+                extension, they are plain text files and can be attached directly to a bug report.</p>
+            <p>On Tiger (Mac OS X 10.4), all crashes are logged to <tt>Safari.crash.log</tt>. This is a plain text file and can
+                be viewed in the default Console.app or your favorite text editor. <strong>All</strong> of Safari's crashes are logged
+                to this file so please only attach the last crash in it. Crashes are separated by a series of asterisks
+                (&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;&lowast;) for easy identification.</p>
         </li>
     </ol>
 </div>
