@@ -1,3 +1,11 @@
+2008-03-15  Matt Lilek  <webkit@mattlilek.com>
+
+        Rubber-stamped by Mitz.
+
+        Update crash log page with instructions for Leopard.
+
+        * quality/crashlogs.html:
+
 2008-03-11  Robert Blaut  <webkit@blaut.biz>
 
         Reviewed by Darin Adler.
